--- a/source/jade/equipments-static.jade
+++ b/source/jade/equipments-static.jade
@@ -32,9 +32,10 @@ block append content
 									a(href='#') 51
 								.views
 									a(href='#') 225
-						ul.articles__item-controls.articles__item-controls_pad.inline
-							li.articles__item-controls-edit.js-edit-link
-							li.articles__item-controls-delete
+						ul.admin-box.admin-box_line-padding
+							li.admin-edit.js-edit-link
+							li.admin-delete
+							li.admin-status
 					//---------- 
 					.articles__edit.js-edit-item
 						form(action="#").block
