--- a/source/jade/reports.jade
+++ b/source/jade/reports.jade
@@ -55,7 +55,77 @@ block append content
 							a(href="#change").js-change-dates месяц		
 							a(href="#change").js-change-dates все время		
 				.lineedit
-					a(href="#").btn-orange-wide.inline Построить отчет
+					a(href="#report-add-table").btn-orange-wide.inline Построить отчет
+
+	.remodal(data-remodal-id="report-add-table")
+		.popedit
+			.popedit__name 
+				| Построить отчет
+				.desc о добавлении новых объектов каталогизации
+			.box-info
+				.box
+					.bname
+						h3 Конструктор отчетов
+					.bcon.bcon-mod
+						table.table-ind
+							thead
+								tr
+									td.num #
+									td Вуз
+									td Краткое описание
+							tbody
+								tr
+									td.num 1
+									td ТПУ
+									td 
+										a(href="#") Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527
+								tr
+									td.num 2
+									td ТУСУР
+									td 
+										a(href="#") Автомат установки компонентов: АРС L40
+								tr
+									td.num 3
+									td КамГУ им. В.Беринга
+									td 
+										a(href="#") Автоматизированная система пробоподготовки для петрографических и минераграфических исследований 
+								tr
+									td.num 4
+									td АмГПГУ
+									td 
+										a(href="#") Автоматизированная система управлением освещением 
+								tr.is-active
+									td.num 5
+									td ТюмГНГУ
+									td 
+										a(href="#") Автоматизированная установка для исследования эксплуатационных характеристик продуктивных пластов FDS-350 VINCI TECHNOLOGIES 
+								tr
+									td.num 6
+									td СибГИУ
+									td 
+										a(href="#") Автоматизированная установка низкотемпературного моделирования саморегулирующегося струйно-эмульсионного реактора. 
+								tr
+									td.num 7
+									td ЮЗГУ
+									td 
+										a(href="#") Автоматизированное рабочее место конструктора АРМК (ПК с 3-мя мониторами,антенное поворотное устр-во, радиостанция,видеоадаптер) 
+								tr
+									td.num 8
+									td КНИТУ
+									td 
+										a(href="#") Автоматизированное рабочее место многодисциплинарного структурного анализа (США)
+								tr
+									td.num 9
+									td КНИТУ
+									td 
+										a(href="#") Автоматизированное рабочее место по созданию сложных конструкций и агрегатов перспективных транспортных средств на основе твердотельного 3D моделирования (США) 
+								tr
+									td.num 10
+									td КНИТУ
+									td 
+										a(href="#") Автоматизированное рабочее место расчета статической и динамической прочности (США) 		
+			.action
+				a(href="#report-add").btn-orange-wide.inline Построить отчет
 
 
 	.main-width.main-wrap
